# libraria

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
libraria/: __init__.py  cli.py  search  searchpage.html
tests/: test_libraria.py
