[tool.poetry]
name = "libraria"
version = "0.1.0"
description = "A library for searching libraries for books"
authors = ["Daniel Cardoza <dan@danielcardoza.com>"]
maintainers = ["Daniel Cardoza <dan@danielcardoza.com>"]
repository = "https://github.com/dang3r/libraria"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dang3r/libraria"

[tool.poetry.scripts]
libraria = "libraria.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
daiquiri = "^2.0.0"
requests = "^2.22.0"
bs4 = "^0.0.1"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
